src/objects/P360_RequestSetting__c.object
<CustomObject>
    <description>P360 - This custom object will hold the values for each question for &apos;request&apos; scoring</description>
    <fields>
        <fullName>MaxScore__c</fullName>
        <description>The total maximum points possible for a &apos;new application&apos; request</description>
        <formula>Q1_Score__c 
+ Q2_Score__c 
+ Q3_Score__c 
+ ( MAX ( Q4A_Score__c, Q4B_Score__c, Q4C_Score__c ) )
+ ( 5 * Q5_Score__c) /* 5 implies the max. number of multi-select options that can be selected for &apos;type of users are impacted&apos; field on the request object. If those picklist options are increased or decreased, update that number accordingly here */
+ ( 6 * Q6_Score__c) /* 6 implies the max. number of multi-select options that can be selected for &apos;benefits of implementation&apos; field on the request object. If those picklist options are increased or decreased, update that number accordingly here */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total maximum points possible for a &apos;new application&apos; request</inlineHelpText>
        <label>Max Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_Score__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Q1 Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <defaultValue>&quot;Is this request the result of a Federal Mandate?&quot;</defaultValue>
        <label>Q1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q2_Score__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Q2 Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <defaultValue>&quot;Does your management support this request?&quot;</defaultValue>
        <label>Q2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q3_Score__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Q3 Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <defaultValue>&quot;Do you have any cost information at this time?&quot;</defaultValue>
        <label>Q3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4A_Score__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Q4-A Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q4A__c</fullName>
        <defaultValue>&quot;1-100&quot;</defaultValue>
        <label>Q4-A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4B_Score__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Q4-B Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q4B__c</fullName>
        <defaultValue>&quot;101-5000&quot;</defaultValue>
        <label>Q4-B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4C_Score__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Q4-C Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q4C__c</fullName>
        <defaultValue>&quot;5000+&quot;</defaultValue>
        <label>Q4-C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Request Setting</label>
    <nameField>
        <label>Request Setting</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>P360_UsersCannotChangeName</fullName>
        <active>true</active>
        <description>P360 - No one can change the Name because it is being used in the Process Builder to update all request records with the score configuration record whose name is &apos;Request&apos;</description>
        <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
        <errorMessage>You do not have sufficient privileges to perform this action</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P360_UsersCannotCreateRecords</fullName>
        <active>true</active>
        <description>P360 - Only System Administrators can create records for this object</description>
        <errorConditionFormula>AND ( ISNEW() , 
 $Profile.Name  &lt;&gt; &apos;GSA System Administrator&apos; , 
 $Profile.Name  &lt;&gt; &apos;System Administrator&apos; , 
 $Profile.Name  &lt;&gt; &apos;GSA System User&apos;
)</errorConditionFormula>
        <errorMessage>You do not have sufficient privileges to create new score configurations</errorMessage>
    </validationRules>
</CustomObject>